--- a/prometheus-consul-exporter/alerts.yaml
+++ b/prometheus-consul-exporter/alerts.yaml
@@ -1,6 +1,6 @@
 # used for generate prometheusrule and alertmanagerconfig
-- name: ConsulDown
-  namespace: __namespace__
+- name: consul-down
+  alertType: monitor
   expr: consul_up{service="__fullname__",namespace="__namespace__"}
   message: Consul [namespace {{ $labels.namespace }}] [service {{ $labels.service }}] [instance {{ $labels.instance }}] down
   for: 0m
@@ -9,11 +9,10 @@
       compareValue: "0"
       severity: critical
   receivers:
-    - alertChannel:
-        id: 1
+    - alertChannelID: 1
       interval: 10m
-- name: ConsulServiceHealthcheckFailed
-  namespace: __namespace__
+- name: consul-service-healthcheck-failed
+  alertType: monitor
   expr: consul_catalog_service_node_healthy{service="__fullname__",namespace="__namespace__"}
   message: Consul service healthcheck failed [namespace {{ $labels.namespace }}] [service {{ $labels.service }}] [instance {{ $labels.instance }}]
   for: 0m
@@ -22,6 +21,5 @@
       compareValue: "0"
       severity: critical
   receivers:
-    - alertChannel:
-        id: 1
+    - alertChannelID: 1
       interval: 10m
