--- a/prometheus-memcached-exporter/alerts.yaml
+++ b/prometheus-memcached-exporter/alerts.yaml
@@ -1,6 +1,6 @@
 # used for generate prometheusrule and alertmanagerconfig
-- name: MemcachedDown
-  namespace: __namespace__
+- name: memcached-down
+  alertType: monitor
   expr: memcached_up{service="__fullname__",namespace="__namespace__"}
   message: Memcached [namespace {{ $labels.namespace }}] [service {{ $labels.service }}] [instance {{ $labels.instance }}] down
   for: 0m
@@ -9,11 +9,10 @@
       compareValue: "0"
       severity: critical
   receivers:
-    - alertChannel:
-        id: 1
+    - alertChannelID: 1
       interval: 10m
-- name: MemcachedLowAvalibleConnections
-  namespace: __namespace__
+- name: memcached-low-avalible-connections
+  alertType: monitor
   expr: memcached_current_connections{service="__fullname__",namespace="__namespace__"} / memcached_max_connections{service="__fullname__",namespace="__namespace__"} * 100
   message: memcached few available connections [namespace {{ $labels.namespace }}] [service {{ $labels.service }}] [instance {{ $labels.instance }}]
   for: 0m
@@ -22,6 +21,5 @@
       compareValue: "90"
       severity: error
   receivers:
-    - alertChannel:
-        id: 1
+    - alertChannelID: 1
       interval: 10m
