--- a/prometheus-postgres-exporter/alerts.yaml
+++ b/prometheus-postgres-exporter/alerts.yaml
@@ -1,6 +1,6 @@
 # used for generate prometheusrule and alertmanagerconfig
-- name: PostgresqlDown
-  namespace: __namespace__
+- name: postgresql-down
+  alertType: monitor
   expr: pg_up{service="__fullname__",namespace="__namespace__"}
   message: Postgresql [namespace {{ $labels.namespace }}] [service {{ $labels.service }}] [instance {{ $labels.instance }}] node {{ $labels.node }} down
   for: 0m
@@ -9,11 +9,10 @@
       compareValue: "0"
       severity: critical
   receivers:
-    - alertChannel:
-        id: 1
+    - alertChannelID: 1
       interval: 10m
-- name: PostgresqlRestarted
-  namespace: __namespace__
+- name: postgresql-restarted
+  alertType: monitor
   expr: time() - pg_postmaster_start_time_seconds{service="__fullname__",namespace="__namespace__"}
   message: Postgresql restarted [namespace {{ $labels.namespace }}] [service {{ $labels.service }}] [instance {{ $labels.instance }}].
   for: 0m
@@ -22,11 +21,10 @@
       compareValue: "60"
       severity: critical
   receivers:
-    - alertChannel:
-        id: 1
+    - alertChannelID: 1
       interval: 10m
-- name: PostgresqlTooManyConnections
-  namespace: __namespace__
+- name: postgresql-too-many-connections
+  alertType: monitor
   expr: sum by (datname) (pg_stat_activity_count{datname!~"template.*|postgres",service="__fullname__",namespace="__namespace__"})
   message: Postgresql too many connections [namespace {{ $labels.namespace }}] [service {{ $labels.service }}] [instance {{ $labels.instance }}] [node {{ $labels.node }}],now {{ $value }}
   for: 2m
@@ -35,6 +33,5 @@
       compareValue: 'pg_settings_max_connections{service="__fullname__",namespace="__namespace__"} * 0.8'
       severity: error
   receivers:
-    - alertChannel:
-        id: 1
+    - alertChannelID: 1
       interval: 10m
