--- a/prometheus-redis-exporter/alerts.yaml
+++ b/prometheus-redis-exporter/alerts.yaml
@@ -1,6 +1,6 @@
 # used for generate prometheusrule and alertmanagerconfig
-- name: RedisDown
-  namespace: __namespace__
+- name: redis-down
+  alertType: monitor
   expr: redis_up{service="__fullname__",namespace="__namespace__"}
   message: Redis [namespace {{ $labels.namespace }}] [service {{ $labels.service }}] [instance {{ $labels.instance }}] down
   for: 0m
@@ -9,11 +9,10 @@
       compareValue: "0"
       severity: critical
   receivers:
-    - alertChannel:
-        id: 1
+    - alertChannelID: 1
       interval: 10m
-- name: RedisMemoryHigh
-  namespace: __namespace__
+- name: redis-memory-high
+  alertType: monitor
   expr: redis_memory_used_bytes{service="__fullname__",namespace="__namespace__"} / redis_memory_max_bytes{service="__fullname__", namespace="__namespace__"} * 100
   message: Redis [namespace {{ $labels.namespace }}] [service {{ $labels.service }}] [instance {{ $labels.instance }}] is using too much memory
   for: 2m
@@ -22,11 +21,10 @@
       compareValue: "90"
       severity: error
   receivers:
-    - alertChannel:
-        id: 1
+    - alertChannelID: 1
       interval: 10m
-- name: RedisTooManyConnections
-  namespace: __namespace__
+- name: redis-too-many-connections
+  alertType: monitor
   expr: redis_connected_clients{service="__fullname__",namespace="__namespace__"} / redis_config_maxclients{service="__fullname__",namespace="__namespace__"} * 100
   message: Redis too many connections [namespace {{ $labels.namespace }}] [service {{ $labels.service }}] [instance {{ $labels.instance }}]
   for: 5m
@@ -35,11 +33,10 @@
       compareValue: "60"
       severity: error
   receivers:
-    - alertChannel:
-        id: 1
+    - alertChannelID: 1
       interval: 10m
-- name: RedisRejectedConnections
-  namespace: __namespace__
+- name: redis-rejected-connections
+  alertType: monitor
   expr: increase(redis_rejected_connections_total{service="__fullname__",namespace="__namespace__"}[1m])
   message: MySQL [namespace {{ $labels.namespace }}] [service {{ $labels.service }}] [instance {{ $labels.instance }}] restarted
   for: 0m
@@ -48,6 +45,5 @@
       compareValue: "0"
       severity: error
   receivers:
-    - alertChannel:
-        id: 1
+    - alertChannelID: 1
       interval: 10m
