--- a/prometheus-consul-exporter/alerts.yaml
+++ b/prometheus-consul-exporter/alerts.yaml
@@ -1,25 +1,21 @@
 # used for generate prometheusrule and alertmanagerconfig
 - name: consul-down
   alertType: monitor
-  expr: consul_up{service="__fullname__",namespace="__namespace__"}
+  expr: consul_up{service="__fullname__",namespace="__namespace__"} == 0
   message: Consul [namespace {{ $labels.namespace }}] [service {{ $labels.service }}] [instance {{ $labels.instance }}] down
   for: 0m
   alertLevels:
-    - compareOp: "=="
-      compareValue: "0"
-      severity: critical
+    - severity: critical
   receivers:
     - alertChannelID: 1
       interval: 10m
 - name: consul-service-healthcheck-failed
   alertType: monitor
-  expr: consul_catalog_service_node_healthy{service="__fullname__",namespace="__namespace__"}
+  expr: consul_catalog_service_node_healthy{service="__fullname__",namespace="__namespace__"} == 0
   message: Consul service healthcheck failed [namespace {{ $labels.namespace }}] [service {{ $labels.service }}] [instance {{ $labels.instance }}]
   for: 0m
   alertLevels:
-    - compareOp: "=="
-      compareValue: "0"
-      severity: critical
+    - severity: critical
   receivers:
     - alertChannelID: 1
       interval: 10m
