--- a/prometheus-elasticsearch-exporter/alerts.yaml
+++ b/prometheus-elasticsearch-exporter/alerts.yaml
@@ -1,61 +1,51 @@
 # used for generate prometheusrule and alertmanagerconfig
 - name: elasticsearch-data-used-too-high
   alertType: monitor
-  expr: (elasticsearch_filesystem_data_size_bytes{service="__fullname__",namespace="__namespace__"} - elasticsearch_filesystem_data_free_bytes{service="__fullname__",namespace="__namespace__"}) / elasticsearch_filesystem_data_size_bytes{service="__fullname__",namespace="__namespace__"} * 100
+  expr: (elasticsearch_filesystem_data_size_bytes{service="__fullname__",namespace="__namespace__"} - elasticsearch_filesystem_data_free_bytes{service="__fullname__",namespace="__namespace__"}) / elasticsearch_filesystem_data_size_bytes{service="__fullname__",namespace="__namespace__"} * 100 > 80
   message: ElasticSearch [namespace {{ $labels.namespace }}] [service {{ $labels.service }}] [instance {{ $labels.instance }}] Data Used Too High.
   for: 1h
   alertLevels:
-    - compareOp: ">"
-      compareValue: "80"
-      severity: error
+    - severity: error
   receivers:
     - alertChannelID: 1
       interval: 10m
 - name: elasticsearch-heap-too-high
   alertType: monitor
-  expr: elasticsearch_jvm_memory_used_bytes{service="__fullname__",area="heap",namespace="__namespace__"} / elasticsearch_jvm_memory_max_bytes{service="__fullname__",area="heap",namespace="__namespace__"}
+  expr: elasticsearch_jvm_memory_used_bytes{service="__fullname__",area="heap",namespace="__namespace__"} / elasticsearch_jvm_memory_max_bytes{service="__fullname__",area="heap",namespace="__namespace__"} > 0.9
   message: ElasticSearch [namespace {{ $labels.namespace }}] [service {{ $labels.service }}] [instance {{ $labels.instance }}] [node {{ $labels.node }}] heap usage is high
   for: 15m
   alertLevels:
-    - compareOp: ">"
-      compareValue: "0.9"
-      severity: critical
+    - severity: critical
   receivers:
     - alertChannelID: 1
       interval: 10m
 - name: elasticsearch-cluster
   alertType: monitor
-  expr: elasticsearch_cluster_health_status{color="red", namespace="__namespace__",service="__fullname__"}
+  expr: elasticsearch_cluster_health_status{color="red", namespace="__namespace__",service="__fullname__"} == 1
   message: Elasticsearch Cluster Red [namespace {{ $labels.namespace }}] [service {{ $labels.service }}] [instance {{ $labels.instance }}]
   for: 0m
   alertLevels:
-    - compareOp: "=="
-      compareValue: "1"
-      severity: critical
+    - severity: critical
   receivers:
     - alertChannelID: 1
       interval: 10m
 - name: elasticsearch-cluster-yellow
   alertType: monitor
-  expr: elasticsearch_cluster_health_status{color="yellow",namespace="__namespace__",service="__fullname__"}
+  expr: elasticsearch_cluster_health_status{color="yellow",namespace="__namespace__",service="__fullname__"} == 1
   message: Elasticsearch Cluster Yellow [namespace {{ $labels.namespace }}] [service {{ $labels.service }}] [instance {{ $labels.instance }}]
   for: 0m
   alertLevels:
-    - compareOp: "=="
-      compareValue: "1"
-      severity: error
+    - severity: error
   receivers:
     - alertChannelID: 1
       interval: 10m
 - name: elasticsearch-unassigned-shards
   alertType: monitor
-  expr: elasticsearch_cluster_health_unassigned_shards{namespace="__namespace__",service="__fullname__"}
+  expr: elasticsearch_cluster_health_unassigned_shards{namespace="__namespace__",service="__fullname__"} > 0
   message: Elasticsearch unassigned shards [namespace {{ $labels.namespace }}] [service {{ $labels.service }}] [instance {{ $labels.instance }}]
   for: 0m
   alertLevels:
-    - compareOp: ">"
-      compareValue: "0"
-      severity: critical
+    - severity: critical
   receivers:
     - alertChannelID: 1
       interval: 10m
