--- a/prometheus-mongodb-exporter-v2/alerts.yaml
+++ b/prometheus-mongodb-exporter-v2/alerts.yaml
@@ -1,52 +1,41 @@
 # used for generate prometheusrule and alertmanagerconfig
 - name: mongodb-down
   alertType: monitor
-  expr: mongodb_up{service="__fullname__",namespace="__namespace__"}
+  expr: mongodb_up{service="__fullname__",namespace="__namespace__"} == 0
   message: MongoDB [namespace {{ $labels.namespace }}] [service {{ $labels.service }}] [instance {{ $labels.instance }}] down
   for: 0m
   alertLevels:
-    - compareOp: "=="
-      compareValue: "0"
-      severity: critical
+    - severity: critical
   receivers:
     - alertChannelID: 1
       interval: 10m
 - name: mongodb-too-many-connections
   alertType: monitor
-  expr: avg by(instance) (rate(mongodb_connections{state="current",service="__fullname__",namespace="__namespace__"}[1m])) / avg by(instance) (sum (mongodb_connections{service="__fullname__",namespace="__namespace__"})) * 100
+  expr: avg by(instance) (rate(mongodb_connections{state="current",service="__fullname__",namespace="__namespace__"}[1m])) / avg by(instance) (sum (mongodb_connections{service="__fullname__",namespace="__namespace__"})) * 100 > 80
   message: MongoDB too many connections [namespace {{ $labels.namespace }}] [service {{ $labels.service }}] [instance {{ $labels.instance }}]
   for: 5m
   alertLevels:
-    - compareOp: ">"
-      compareValue: "80"
-      severity: error
+    - severity: error
   receivers:
     - alertChannelID: 1
       interval: 10m
 - name: mongodb-low-avalible-connections
   alertType: monitor
-  expr: mongodb_connections{state="available",service="__fullname__",namespace="__namespace__"}
+  expr: mongodb_connections{state="available",service="__fullname__",namespace="__namespace__"} < 100
   message: MongoDB few available connections [namespace {{ $labels.namespace }}] [service {{ $labels.service }}] [instance {{ $labels.instance }}]
   for: 5m
   alertLevels:
-    - compareOp: "<"
-      compareValue: "100"
-      severity: critical
+    - severity: critical
   receivers:
     - alertChannelID: 1
       interval: 10m
 - name: mongodb-too-many-memories
   alertType: monitor
-  expr: mongodb_mongod_wiredtiger_cache_bytes{type="total",service="__fullname__",namespace="__namespace__"} / on(pod,namespace,instance,job,service) mongodb_mongod_wiredtiger_cache_max_bytes{service="__fullname__",namespace="__namespace__"} * 100
+  expr: mongodb_mongod_wiredtiger_cache_bytes{type="total",service="__fullname__",namespace="__namespace__"} / on(pod,namespace,instance,job,service) mongodb_mongod_wiredtiger_cache_max_bytes{service="__fullname__",namespace="__namespace__"} * 100 > 80
   message: MongoDB too many memories [namespace {{ $labels.namespace }}] [service {{ $labels.service }}] [instance {{ $labels.instance }}]
   for: 5m
   alertLevels:
-    - compareOp: ">"
-      compareValue: "80"
-      severity: error
-    - compareOp: ">"
-      compareValue: "90"
-      severity: critical
+    - severity: error
   inhibitLabels: [instance]
   receivers:
     - alertChannelID: 1
