--- a/prometheus-mysql-exporter/alerts.yaml
+++ b/prometheus-mysql-exporter/alerts.yaml
@@ -1,49 +1,41 @@
 # used for generate prometheusrule and alertmanagerconfig
 - name: mysql-down
   alertType: monitor
-  expr: mysql_up{service="__fullname__",namespace="__namespace__"}
+  expr: mysql_up{service="__fullname__",namespace="__namespace__"} == 0
   message: MySQL [namespace {{ $labels.namespace }}] [service {{ $labels.service }}] [instance {{ $labels.instance }}] down
   for: 0m
   alertLevels:
-    - compareOp: "=="
-      compareValue: "0"
-      severity: critical
+    - severity: critical
   receivers:
     - alertChannelID: 1
       interval: 10m
 - name: mysql-too-many-connections
   alertType: monitor
-  expr: max_over_time(mysql_global_status_threads_connected{service="__fullname__",namespace="__namespace__"}[1m]) / mysql_global_variables_max_connections{service="__fullname__",namespace="__namespace__"} * 100
+  expr: max_over_time(mysql_global_status_threads_connected{service="__fullname__",namespace="__namespace__"}[1m]) / mysql_global_variables_max_connections{service="__fullname__",namespace="__namespace__"} * 100 > 80
   message: MySQL [namespace {{ $labels.namespace }}] [service {{ $labels.service }}] [instance {{ $labels.instance }}] too many connections > 80%
   for: 2m
   alertLevels:
-    - compareOp: ">"
-      compareValue: "80"
-      severity: error
+    - severity: error
   receivers:
     - alertChannelID: 1
       interval: 10m
 - name: mysql-slow-queries
   alertType: monitor
-  expr: increase(mysql_global_status_slow_queries{service="__fullname__",namespace="__namespace__"}[1m])
+  expr: increase(mysql_global_status_slow_queries{service="__fullname__",namespace="__namespace__"}[1m]) > 0
   message: MySQL [namespace {{ $labels.namespace }}] [service {{ $labels.service }}] [instance {{ $labels.instance }}] slow queries
   for: 2m
   alertLevels:
-    - compareOp: ">"
-      compareValue: "0"
-      severity: error
+    - severity: error
   receivers:
     - alertChannelID: 1
       interval: 10m
 - name: mysql-restarted
   alertType: monitor
-  expr: mysql_global_status_uptime{service="__fullname__",namespace="__namespace__"}
+  expr: mysql_global_status_uptime{service="__fullname__",namespace="__namespace__"} < 60
   message: MySQL [namespace {{ $labels.namespace }}] [service {{ $labels.service }}] [instance {{ $labels.instance }}] restarted
   for: 0m
   alertLevels:
-    - compareOp: "<"
-      compareValue: "60"
-      severity: error
+    - severity: error
   receivers:
     - alertChannelID: 1
       interval: 10m
