--- a/prometheus-redis-exporter/alerts.yaml
+++ b/prometheus-redis-exporter/alerts.yaml
@@ -1,49 +1,41 @@
 # used for generate prometheusrule and alertmanagerconfig
 - name: redis-down
   alertType: monitor
-  expr: redis_up{service="__fullname__",namespace="__namespace__"}
+  expr: redis_up{service="__fullname__",namespace="__namespace__"} == 0
   message: Redis [namespace {{ $labels.namespace }}] [service {{ $labels.service }}] [instance {{ $labels.instance }}] down
   for: 0m
   alertLevels:
-    - compareOp: "=="
-      compareValue: "0"
-      severity: critical
+    - severity: critical
   receivers:
     - alertChannelID: 1
       interval: 10m
 - name: redis-memory-high
   alertType: monitor
-  expr: redis_memory_used_bytes{service="__fullname__",namespace="__namespace__"} / redis_memory_max_bytes{service="__fullname__", namespace="__namespace__"} * 100
+  expr: redis_memory_used_bytes{service="__fullname__",namespace="__namespace__"} / redis_memory_max_bytes{service="__fullname__", namespace="__namespace__"} * 100 > 90 < 100
   message: Redis [namespace {{ $labels.namespace }}] [service {{ $labels.service }}] [instance {{ $labels.instance }}] is using too much memory
   for: 2m
   alertLevels:
-    - compareOp: ">"
-      compareValue: "90"
-      severity: error
+    - severity: error
   receivers:
     - alertChannelID: 1
       interval: 10m
 - name: redis-too-many-connections
   alertType: monitor
-  expr: redis_connected_clients{service="__fullname__",namespace="__namespace__"} / redis_config_maxclients{service="__fullname__",namespace="__namespace__"} * 100
+  expr: redis_connected_clients{service="__fullname__",namespace="__namespace__"} / redis_config_maxclients{service="__fullname__",namespace="__namespace__"} * 100 > 60
   message: Redis too many connections [namespace {{ $labels.namespace }}] [service {{ $labels.service }}] [instance {{ $labels.instance }}]
   for: 5m
   alertLevels:
-    - compareOp: ">"
-      compareValue: "60"
-      severity: error
+    - severity: error
   receivers:
     - alertChannelID: 1
       interval: 10m
 - name: redis-rejected-connections
   alertType: monitor
-  expr: increase(redis_rejected_connections_total{service="__fullname__",namespace="__namespace__"}[1m])
+  expr: increase(redis_rejected_connections_total{service="__fullname__",namespace="__namespace__"}[1m]) > 0
   message: MySQL [namespace {{ $labels.namespace }}] [service {{ $labels.service }}] [instance {{ $labels.instance }}] restarted
   for: 0m
   alertLevels:
-    - compareOp: ">"
-      compareValue: "0"
-      severity: error
+    - severity: error
   receivers:
     - alertChannelID: 1
       interval: 10m
