feat: add mongodb7 to kubegemapp

--- a/mysql8/Chart.yaml
+++ b/mysql8/Chart.yaml
@@ -29,6 +29,8 @@ keywords:
 maintainers:
 - name: Broadcom, Inc. All Rights Reserved.
   url: https://github.com/bitnami/charts
+- name: KubeGems
+  url: https://github.com/kubegems
 name: mysql
 sources:
 - https://github.com/bitnami/charts/tree/main/bitnami/mysql
